config la conx a la base de donnes

--- a/templates/homepage.html.twig
+++ b/templates/homepage.html.twig
@@ -13,7 +13,8 @@
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">
-                    Slim Starter
+                {# on affiche une variable avec {{variable}}#}
+                    Slim Starter -{{database_name}}
                 </h1>
                 <h2 class="subtitle">
                     Preconfigured Slim app with PHP-DI, Twig and Doctrine DBAL.
@@ -29,7 +30,14 @@
                     <h3 class="title has-text-centered">It works !</h3>
                     <div class="content">
                         <p class="has-text-centered">This is the default page, go build something great !</p>
+                        {#on effectue les baucles  avec la structure for in #}
+                            {% for user in  users %}
+                           {{user }}<br>
 
+                            {% endfor %}
+                            {{xss|raw }}
+                            <a href="{{link('test')}}">test</a>
+                            
                         <figure class="image">
                             <img src="https://media.giphy.com/media/xT9IgG50Fb7Mi0prBC/giphy.gif" alt="Welcome GIF">
                         </figure>
